Added main app module for gps reader

--- a/sources/gps_reader_node/makefile
+++ b/sources/gps_reader_node/makefile
@@ -1,4 +1,5 @@
 
 GPS_NODE_PREFIX := $(SOURCEPREFIX)gps_reader_node/
-CFLAGS += -I$(GPS_NODE_PREFIX)
-SOURCES += $(GPS_NODE_PREFIX)gps_reader.c
+CFLAGS += -I$(GPS_NODE_PREFIX) -DGPS_TIME_MODULE
+SOURCES += $(GPS_NODE_PREFIX)gps_reader.c \
+           $(GPS_NODE_PREFIX)usart.c
