Moved USART to common modules

--- a/sources/common/makefile
+++ b/sources/common/makefile
@@ -2,4 +2,5 @@
 COMMON_PREFIX := $(SOURCEPREFIX)common/
 CFLAGS += -I$(COMMON_PREFIX)
 SOURCES += $(COMMON_PREFIX)timer.c \
-           $(COMMON_PREFIX)radio.c
+           $(COMMON_PREFIX)radio.c \
+           $(COMMON_PREFIX)usart.c
