Simple interrupt mask utility module

--- a/sources/common/makefile
+++ b/sources/common/makefile
@@ -4,3 +4,4 @@ CFLAGS += -I$(COMMON_PREFIX)
 SOURCES += $(COMMON_PREFIX)timer.c \
            $(COMMON_PREFIX)radio.c \
            $(COMMON_PREFIX)usart.c
+           $(COMMON_PREFIX)interrupt.c
