--- a/sources/common/makefile
+++ b/sources/common/makefile
@@ -5,3 +5,4 @@ SOURCES += $(COMMON_PREFIX)timer.c \
            $(COMMON_PREFIX)radio.c \
            $(COMMON_PREFIX)usart.c
            $(COMMON_PREFIX)interrupt.c
+           $(COMMON_PREFIX)debug.c
