System time module (calendar)

--- a/sources/common/makefile
+++ b/sources/common/makefile
@@ -3,6 +3,7 @@ COMMON_PREFIX := $(SOURCEPREFIX)common/
 CFLAGS += -I$(COMMON_PREFIX)
 SOURCES += $(COMMON_PREFIX)timer.c \
            $(COMMON_PREFIX)radio.c \
-           $(COMMON_PREFIX)usart.c
-           $(COMMON_PREFIX)interrupt.c
+           $(COMMON_PREFIX)usart.c \
+           $(COMMON_PREFIX)system_time.c \
+           $(COMMON_PREFIX)interrupt.c \
            $(COMMON_PREFIX)debug.c
