Stub codes for testing that RX works.

--- a/sources/clock_module/makefile
+++ b/sources/clock_module/makefile
@@ -1,3 +1,4 @@
 
-CLOCK_MODULE_PREFIX := $(SOURCEPREFIX)hal/
+CLOCK_MODULE_PREFIX := $(SOURCEPREFIX)clock_module/
 CFLAGS += -I$(CLOCK_MODULE_PREFIX) -DCLOCK_MODULE
+SOURCES += $(CLOCK_MODULE_PREFIX)clock_module.c
