Display control and fonts

--- a/sources/clock_module/makefile
+++ b/sources/clock_module/makefile
@@ -1,4 +1,5 @@
 
 CLOCK_MODULE_PREFIX := $(SOURCEPREFIX)clock_module/
 CFLAGS += -I$(CLOCK_MODULE_PREFIX) -DCLOCK_MODULE
-SOURCES += $(CLOCK_MODULE_PREFIX)clock_module.c
+SOURCES += $(CLOCK_MODULE_PREFIX)clock_module.c \
+           $(CLOCK_MODULE_PREFIX)fonts.c
